--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "axios": "^1.3.4",
     "pinia": "^2.0.32",
     "primeicons": "^6.0.1",
     "primevue": "^3.25.0",
