--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "primevue": "^3.25.0",
     "vue": "^3.2.47",
     "vue-popperjs": "^2.3.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
